# Maroon-Ecosystem-Root

./: .gitignore  COMMAND_MANIFEST.md  MAROON_CONTROL_PLANE.md  MAROON_MASTER_CODEX.md  MAROON_OPERATIONS_MANUAL.md  README.md  add_docker_user.py  boot_all.ps1  check_health.py  docker-compose.yml  execute_cutover.ps1  install_all.ps1  stack.yaml  start_ecosystem.bat  start_ecosystem.ps1
configs/: REPO_MAP.yaml
law-finance-core/: README.md
maroon-compliance-core/: Dockerfile  README.md
maroon-council-core/: Dockerfile  README.md  request.json  requirements.txt
maroon-edge-platform/: README.md
maroon-infrastructure/: iam.tf  main.tf  variables.tf
maroon-law-finance-core/: Dockerfile  README.md
maroon-market-core/: Dockerfile  README.md  medusa-config.js  package-lock.json  package.json
maroon-market-logistics/: Dockerfile  README.md
maroon-medical-diagnostics/: Dockerfile  README.md
maroon-medical-opco/: Dockerfile  README.md
maroon-medical-rehab/: Dockerfile  README.md
maroon-osint-swarm/: Dockerfile  README.md
maroon-pac-core/: Dockerfile  README.md
maroon-palantir-lake/: Dockerfile  README.md  requirements.txt
maroon-real-estate-core/: Dockerfile  README.md  package-lock.json  package.json
maroon-sovereign-infra/: README.md
maroon-truth-teller-core/: Cargo.toml  Dockerfile  README.md
maroon-truth-teller-core/configs/: Cargo.toml
maroon-truth-teller-core/src/: main.rs
maroon-tube-core/: Dockerfile  README.md
maroon-world-core/: CMakeLists.txt  README.md
maroon-world-core/src/: main.cpp
onitas-market-core/: Dockerfile  (+5 more)
(+91 files in other folders)
